# oak_ros

./: CMakeLists.txt  README.md  package.xml
launch/: start_complete.launch  start_object_detection.launch  start_user_interaction.launch
rviz/: oak_complete.rviz  scene.rviz  user_interaction.rviz
scripts/: oak_objects.py  oak_user.py  oak_user_v2.py
scripts/oak_utils/: HandTracker.py  facerecognition.py  pipeline_oak_objects.py  pipeline_oak_user.py  pipeline_oak_user_v2.py  script.py
scripts/oak_utils/databases/: Arturo.npz  Javier.npz  Miguel.npz
scripts/oak_utils/models/: face-detection-retail-0004_openvino_2021.3_2shave.blob  hand-yolo-tiny.json  yolo-tiny.json
